# aim

./: .windsurfrules  README.md
client/: package.json  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.js
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/agent/: page.tsx
client/src/app/api-test/: page.tsx
client/src/app/contract/: page.tsx
client/src/app/createagent/: page.tsx  voice-integration.tsx
client/src/app/test/: page.tsx
client/src/components/: ContractInfo.tsx  ContractInteractionForm.tsx  TransactionHistory.tsx  banner.tsx  broadcast-button.tsx  card-commands.tsx  header.tsx  language-switcher.tsx  slide-card.tsx  translations-context.tsx  welcome.tsx
client/src/components/blueprint/: Blueprint.tsx  BlueprintContext.tsx  BlueprintLibrary.tsx  BlueprintPanel.tsx  BlueprintSettings.tsx  Connection.tsx  Node.fixed.tsx  Node.tsx  index.ts  (+1 more)
client/src/config/: site.ts
client/src/hooks/: use-project-info.ts  use-webrtc.ts
client/src/lib/: airine-data.ts  config.ts  conversations.ts  navigation-utils.ts  project-info.ts  tools.ts  transcription-context.tsx  wagmi-provider.tsx
client/src/types/: agent.ts
contracts/: NftRecommender.sol
hardhat/: .env.example  README.md  hardhat.config.ts  package-lock.json  package.json
hardhat/contracts/: SonicToken.sol
hardhat/scripts/: deploy.ts  interactWithToken.ts
hardhat/test/: SonicToken.test.ts
zerepy/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
zerepy/agents/: airine457.json  example.json  startupgurutest.json  test1.json
zerepy/src/server/: app.py
(+26 files in other folders)
